# cpp-gtest-gmock

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  init-volumes.sh
.github/workflows/: ci-devcontainer.yaml  ci-testing.yaml
app/: app.cc
lib/: FileLogger.hh  INoise.hh  Ilogger.hh  algebraClass.hh
tst/: logger_mock.hh  noise_mock.hh  tst.cc
